# CLI-Manager

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  License  README.en-US.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  verification.md
.context/history/: commits.jsonl  commits.md
.github/workflows/: release.yml  ssh-agent-check.yml  ssh-agent-release.yml
.trellis/: .template-hashes.json
apps/server/: Cargo.toml
apps/server/migrations/: 0001_initial.sql  0002_device_identity.sql  0003_device_workspace_snapshot.sql  0004_client_identity.sql
apps/server/src/: api.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  registry.rs  state.rs  storage.rs  ws.rs
apps/web/: index.html  package.json  vite.config.ts
crates/web-protocol/: Cargo.toml
data/: cli-manager-web.db-shm  cli-manager-web.db-wal
docs/: Web端UI设计文档.md  功能清单.md
docs/web-design/: 01-产品范围与实施计划.md  02-桌面端数据上报与Web能力映射.md  03-全局框架与设计系统.md  04-登录配对与设备连接.md  05-工作台与AI对话.md  06-项目与Worktree.md  07-文件与Git.md  08-历史与AI-Replay.md  09-分析与请求日志.md  10-设备任务与通知.md  11-供应商Hook与状态栏.md  12-备份恢复与设置.md  (+5 more)
scripts/: codexAppServerProxy.e2e.test.mjs  desktopPetMenuGeometry.test.mjs  prepare-bundle-binaries.mjs  ptyHostSocket.test.mjs  resumeCliArgs.test.mjs  start-web-dev.ps1  tauri-cli.mjs  tauriCliDevProxy.test.mjs  terminalCursorMovement.test.mjs  terminalFileLinks.test.mjs  terminalHookBinding.test.mjs  terminalImeComposition.test.mjs  terminalReplay.test.mjs  terminalVisibility.test.mjs
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
(+310 files in other folders)
